# plasmaQMLTest

./: CMakeLists.txt  Messages.sh  plasmaQML.kdev4
.kdev4/: plasmaQML.kdev4
src/: CMakeLists.txt  plasmaqml.cpp  plasmaqml.h
src/package/: metadata.desktop
